[tool.poetry]
name = "audio-app"
version = "0.1.0"
description = ""
authors = ["Julián Castro <juliancastroruge@gmail.com>"]
readme = "README.md"
packages = [{include = "audio_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
notebook = "^7.2.2"
datasets = "^2.18.0"
kaggle = "^1.6.17"
soundfile = "^0.12.1"
qdrant-client = "^1.12.1"
torch = "^2.5.1"
pandas = "^2.2.3"
kagglehub = "^0.3.4"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.1"
librosa = "^0.10.2.post1"
panns-inference = "^0.1.1"
elasticsearch = "^9.0.1"
pytube = "^15.0.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
